src/test/setup.ts
/// <reference types="vitest" />
import '@testing-library/jest-dom'

// Mock console methods to avoid noise in tests
global.console = {
  ...console,
  // Uncomment to ignore specific console methods in tests
  // log: vi.fn(),
  // warn: vi.fn(),
  // error: vi.fn(),
}